# cs2-sdk

./: .clang-format  .gitignore  CMakeLists.txt
cs2/: cs2.hpp
cs2/ctx/: ctx.hpp
cs2/ctx/impl/: ctx.cpp  ctx.inl
cs2/hacks/: hacks.hpp
cs2/hacks/move/: move.hpp
cs2/hacks/move/impl/: move.cpp
cs2/hooks/: hooks.hpp
cs2/hooks/impl/: input.cpp  ui.cpp
cs2/local_player/: local_player.hpp
cs2/local_player/impl/: local_player.cpp  local_player.inl
cs2/menu/: menu.hpp
cs2/menu/impl/: menu.cpp  menu.inl
cs2/render/: render.hpp
cs2/render/impl/: render.cpp  render.inl
cs2/valve/: valve.hpp
cs2/valve/entities/: entities.hpp
cs2/valve/interfaces/: interfaces.hpp
cs2/valve/interfaces/impl/: interfaces.inl
cs2/valve/other/: other.hpp
cs2/valve/other/impl/: other.inl
cs2/valve/util/: util.hpp
cs2/valve/util/impl/: util.inl
sdk/: sdk.hpp
sdk/cfg/: cfg.hpp
sdk/cfg/detail/: detail.hpp
sdk/cfg/detail/data_types/: base_cfg_var.hpp
sdk/cfg/impl/: cfg.cpp  cfg.inl
sdk/math/: math.hpp
sdk/math/detail/: detail.hpp
sdk/math/detail/data_types/: array_wrapper.hpp  base_clr.hpp  base_mat.hpp  base_qang.hpp  base_rect.hpp  base_vec.hpp
sdk/math/impl/: math.inl
sdk/mem/: mem.hpp
sdk/mem/detail/: detail.hpp
sdk/mem/detail/data_types/: base_address.hpp  base_stack_frame.hpp  pe_format.hpp
sdk/mem/impl/: mem.inl
sdk/util/: util.hpp
sdk/util/detail/: detail.hpp
sdk/util/impl/: util.inl
